force-app/main/default/objects/OrderProduct__c/OrderProduct__c.object-meta.xml
<CustomObject>
    <label>Produto do Pedido</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Produto do Pedido Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos do Pedido</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>