force-app/main/default/objects/OrderProduct__c/fields/ProductUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>ProductUnitPrice__c</fullName>
    <formula>Produto__r.UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Unitário do Produto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>