force-app/main/default/objects/OrderProduct__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <label>Produto</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Produtos do Pedido</relationshipLabel>
    <relationshipName>ProductItem</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>