force-app/main/default/objects/OrderProduct__c/fields/TotalValue__c.field-meta.xml
<CustomField>
    <fullName>TotalValue__c</fullName>
    <formula>Produto__r.UnitPrice__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>